IAV: fix vips layout issue

--- a/blocks/InteractiveVideoBlock/css/interactivevideo_block.less
+++ b/blocks/InteractiveVideoBlock/css/interactivevideo_block.less
@@ -492,7 +492,16 @@ section#courseware .block-content:not([data-view="student"]) .cw-iav-test-conten
 
         .rh_list.hover {
             border-color: #28497c;
+        }
+
+        span.correct_item,
+        .studip_input_wrapper.correct_item {
+            background-color: lightgreen;
+        }
+        
+        .cw-testblock-corrector-comment-corrected {
             background-color: #eee;
+            padding: 1em;
         }
 
         .rh_item {
